--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
-Eze Onyedikachi
-Sara Ferraa
+# This file lists all the contributors to the repoditory
+
+Eze Onyedikachi <thekacchi1@gmail.com>
+Sara Ferraa <sara0411@gmail.com>
